# git-scribe

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pr_body_ci.md  pr_body_final.md  pyproject.toml
.github/workflows/: ci.yml
git_scribe/commands/: pr.py
git_scribe/core/: git_utils.py  github.py
tests/commands/: test_commit.py  test_init.py  test_pr.py
tests/core/: test_config.py  test_editor.py  test_git_utils.py  test_github.py  test_llm.py
