[project]
name = "git-scribe"
version = "0.2.0"
description = "A CLI tool to generate commit messages and pull requests using LLM."
authors = [{ name = "popyson", email = "popyson@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "requests",
    "gitpython",
    "rich",
    "typer[all]",
    "toml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[project.scripts]
git-scribe = "git_scribe.main:app"
